--- a/partial/_header.html.slim
+++ b/partial/_header.html.slim
@@ -7,7 +7,7 @@
       .menu-inner
         a.menu-logo
         ul.primary-nav
-          = nav_link_to "最新消息", "/post/"
+          = nav_link_to "最新消息", "/posts/"
           = nav_link_to "參選宣言", "#"
           = nav_link_to "小英的人生旅途", "#"
           / = nav_link_to "願景", "#"
@@ -15,7 +15,7 @@
           = nav_link_to "捐款", "#"
 
         .menu-bottom
-          a.press-release href="/press-release/" 媒體專區
+          a.press-release href="/press/" 媒體專區
           form.search
             label.search-icon.icon-search
             input.search-input placeholder="搜尋"
