--- a/partial/_hero.html.slim
+++ b/partial/_hero.html.slim
@@ -1,7 +1,7 @@
 .hero
   .hero-wrap-left
     .hero-block-wrap
-      a.hero-block.large style="background-image: url('/images/hero-1.jpg')"  href="/post/"
+      a.hero-block.large style="background-image: url('/images/hero-1.jpg')"  href="/posts/"
         .hero-block-title
           .title 人民期待有責任，有方向感的政府
           .description 這是一段文字敘述，可以寫大約25字左右。
