--- a/partial/_homepage-header.html.slim
+++ b/partial/_homepage-header.html.slim
@@ -7,7 +7,7 @@
       .menu-inner
         a.menu-logo
         ul.primary-nav
-          li.is-active: a href="/post/" 最新消息
+          li.is-active: a href="/posts/" 最新消息
           li: a href="#" 參選宣言
           li: a href="#" 小英的人生旅途
           / li: a href="#" 願景
@@ -15,7 +15,7 @@
           li: a href="#" 捐款
 
         .menu-bottom
-          a.press-release href="/press-release/" 媒體專區
+          a.press-release href="/press/" 媒體專區
           form.search
             label.search-icon.icon-search
             input.search-input placeholder="搜尋"
