--- a/posts/single-post-page.html.slim
+++ b/posts/single-post-page.html.slim
@@ -49,4 +49,4 @@
           h4.related-post-title= zh_lorem_sentence
           span.related-post-category href="#" 故事
 
-= render "/post/fb-setting.erb"
+= render "/posts/fb-setting.erb"
