--- a/search-result/index.html.slim
+++ b/search-result/index.html.slim
@@ -8,10 +8,10 @@
       .post-list-content
         - 6.times do |i|
           .post-item
-            a.post-image href="/post/single-post-page.html" style="background-image: url('http://placehold.it/300x200')"
+            a.post-image href="/posts/single-post-page.html" style="background-image: url('http://placehold.it/300x200')"
             .post-meta
               a.category href="#"= zh_lorem_words(2)
               span.date 2015.7.22
-            a.post-content href="/post/single-post-page.html"
+            a.post-content href="/posts/single-post-page.html"
               h3.post-title= zh_lorem_sentence
               p.post-summary 民主進步黨主席暨總統參選人蔡英文今(25)日下午至桃園連跑兩場行程，除前往祥儀機器人夢工廠及桃園市婦女館參訪，傍晚則是出席在地希望生活節，與民...
