--- a/posts/single-post-page.html.slim
+++ b/posts/single-post-page.html.slim
@@ -1,12 +1,19 @@
 = render '/partial/header'
-.content
+= render '/partial/sub-menu'
+.content.has-sub-menu
   .post
     .post-header style="background-image: url('/images/post-header-image.png')"
       ul.breadcrumb
-        li.breadcrumb-item: a href="#" 最新消息
+        / li.breadcrumb-item: a href="#" 最新消息
         li.breadcrumb-item: a href="#" 故事
       h2.post-title 開創一個真正屬於人民的時代
     .container.container_single-article
+      .post-share
+        span.post-share-title 分享：
+        a.post-share-btn.icon-facebook href="#"
+        a.post-share-btn.icon-twitter href="#"
+        a.post-share-btn.icon-plurk href="#"
+        a.post-share-btn.icon-line href="#"
       .post-meta
         span.post-date 發布時間：2015/7/23
         span.post-tag-title 標籤：
@@ -22,31 +29,24 @@
           a.post-share-btn.icon-plurk href="#"
           a.post-share-btn.icon-line href="#"
           / img.post-fb-like src="/images/fb-like.png"
-        .pager
-          a.pager-item.prev href="#": .pager-title 上一篇
-          a.pager-item.pager-item_return href="#" 返回文章列表
-          a.pager-item.next href="#": .pager-title 下一篇
-
-  .comments
-    .container.container_single-article
-      h3.comments-title 留言
-      .fb-comments data-href="http://iing.tw/" data-width="100%" data-numposts="5"
+        / .pager
+        /   a.pager-item.prev href="#": .pager-title 上一篇
+        /   a.pager-item.pager-item_return href="#" 返回文章列表
+        /   a.pager-item.next href="#": .pager-title 下一篇
 
   .related-posts
     .container.container_single-article
       h3.related-posts-title 相關文章
       .related-post-list
-        a.related-post href="#"
-          img.related-post-img src="http://placehold.it/300x200"
-          h4.related-post-title= zh_lorem_sentence
-          span.related-post-category href="#" 故事
-        a.related-post href="#"
-          img.related-post-img src="http://placehold.it/300x200"
-          h4.related-post-title= zh_lorem_sentence
-          span.related-post-category href="#" 故事
-        a.related-post href="#"
-          img.related-post-img src="http://placehold.it/300x200"
-          h4.related-post-title= zh_lorem_sentence
-          span.related-post-category href="#" 故事
+        - 3.times do |i|
+          a.related-post href="#"
+            img.related-post-img src="http://placehold.it/300x200"
+            h4.related-post-title= zh_lorem_sentence
+            span.related-post-category href="#" 故事
+
+  .comments
+    .container.container_single-article
+      h3.comments-title 留言
+      .fb-comments data-href="http://iing.tw/" data-width="100%" data-numposts="5"
 
 = render "/posts/fb-setting.erb"
