--- a/sass/all.scss
+++ b/sass/all.scss
@@ -33,7 +33,7 @@
 @import "partial/post";
 @import "partial/article";
 @import "partial/comments";
-@import "partial/related-posts";
+@import "partial/aside-posts";
 
 // ==== page ====
 @import "page/homepage";
