--- a/sass/partial/_comments.scss
+++ b/sass/partial/_comments.scss
@@ -7,6 +7,7 @@
     @include adjust-font-size-to(18px);
     color: black;
     border-bottom: 2px solid $color-primary;
+    font-weight: bold;
   }
 
 
