--- a/posts/single-post-page.html.slim
+++ b/posts/single-post-page.html.slim
@@ -43,8 +43,13 @@
             img.aside-post-img src="http://placehold.it/300x200"
             h4.aside-post-title= zh_lorem_sentence
             .aside-post-meta
-              span.category 議題
+              ul.category-list
+                li.category-item: span 政策
+                // 若出現兩者以上議題的架構
+                / li.category-item: span 活動
+                / li.category-item: span 故事
               span.date 2015.7.22
+
 
 
   .comments
