--- a/posts/single-post-page.html.slim
+++ b/posts/single-post-page.html.slim
@@ -15,7 +15,7 @@
         a.post-share-btn.icon-plurk href="#"
         a.post-share-btn.icon-line href="#"
       .post-meta
-        span.post-date 發布時間：2015/7/23
+        span.post-date 發布時間：2015.7.23
         span.post-tag-title 標籤：
         - (rand(5) + 1).times do |i|
           a.post-tag href="/tags/"= zh_lorem_words(rand(5) + 1)
